6th Session of Pandas Bootcamp completed

--- a/Day5.ipynb
+++ b/Day5.ipynb
@@ -1090,7 +1090,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labeled_alphabet = pd.Series(data=list(ascii_lowercase), index=map(lambda x: 'label_' + x,list(ascii_uppercase)))"
+    "labeled_alphabet = pd.Series(data=list(ascii_lowercase), \n",
+    "                             index=map(lambda x: 'label_' + x,list(ascii_uppercase)))"
    ]
   },
   {
