9th session saved

--- a/Day9.ipynb
+++ b/Day9.ipynb
@@ -643,24 +643,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country\n",
+       "Albania               54.0\n",
+       "Algeria               14.0\n",
+       "Andorra              312.0\n",
+       "Angola                45.0\n",
+       "Antigua & Barbuda     45.0\n",
+       "                     ...  \n",
+       "Vanuatu               11.0\n",
+       "Venezuela              3.0\n",
+       "Vietnam                1.0\n",
+       "Zambia                 4.0\n",
+       "Zimbabwe               4.0\n",
+       "Name: wine_servings, Length: 162, dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alcohol.loc[alcohol.notnull()]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wine_servings = alcohol.loc[alcohol.notnull()]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country\n",
+       "Albania               54.0\n",
+       "Algeria               14.0\n",
+       "Andorra              312.0\n",
+       "Angola                45.0\n",
+       "Antigua & Barbuda     45.0\n",
+       "Name: wine_servings, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_servings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8221.0"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_servings.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country\n",
+       "Albania               True\n",
+       "Algeria               True\n",
+       "Andorra              False\n",
+       "Angola                True\n",
+       "Antigua & Barbuda     True\n",
+       "                     ...  \n",
+       "Vanuatu               True\n",
+       "Venezuela             True\n",
+       "Vietnam               True\n",
+       "Zambia                True\n",
+       "Zimbabwe              True\n",
+       "Name: wine_servings, Length: 162, dtype: bool"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_servings < 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country\n",
+       "Afghanistan    False\n",
+       "Albania         True\n",
+       "Algeria         True\n",
+       "Andorra         True\n",
+       "Angola          True\n",
+       "               ...  \n",
+       "Venezuela       True\n",
+       "Vietnam         True\n",
+       "Yemen          False\n",
+       "Zambia          True\n",
+       "Zimbabwe        True\n",
+       "Name: wine_servings, Length: 193, dtype: bool"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alcohol.notnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country\n",
+       "Albania              54.0\n",
+       "Algeria              14.0\n",
+       "Angola               45.0\n",
+       "Antigua & Barbuda    45.0\n",
+       "Armenia              11.0\n",
+       "                     ... \n",
+       "Vanuatu              11.0\n",
+       "Venezuela             3.0\n",
+       "Vietnam               1.0\n",
+       "Zambia                4.0\n",
+       "Zimbabwe              4.0\n",
+       "Name: wine_servings, Length: 132, dtype: float64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_servings[wine_servings < 100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2416.0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wine_servings[wine_servings < 100].sum()"
+   ]
   }
  ],
  "metadata": {
